Apply Pose as Rest Pose Operator crashes Blender 3.1 Beta #95919

Closed
opened 2022-02-20 23:50:55 +01:00 by Juan Pablo Bouza · 8 comments

Blender 3.1 Beta, Ubuntu 64.
Caused by cfa53e0fbe

Short Description
If you have a constraint pointing to a vertex group in an object and you want to run the Apply Pose as Rest Pose operator, Blender 3.1 Beta crashes.

The example of this file is using a copy location constraint but copy rotation also crashes, so the crash might happen with any constraint.

This doesn't happen in Blender 3.0 or earlier.

Steps to Reproduce

  • Open .blend file
  • {nav Ctrl A > Apply Pose to Rest Pose}

I'm uploading a file

vertex_group_bug.blend

Blender 3.1 Beta, Ubuntu 64. Caused by cfa53e0fbe **Short Description** If you have a constraint pointing to a vertex group in an object and you want to run the Apply Pose as Rest Pose operator, Blender 3.1 Beta crashes. The example of this file is using a copy location constraint but copy rotation also crashes, so the crash might happen with any constraint. This doesn't happen in Blender 3.0 or earlier. **Steps to Reproduce** - Open .blend file - {nav Ctrl A > Apply Pose to Rest Pose} I'm uploading a file [vertex_group_bug.blend](https://archive.blender.org/developer/F12879421/vertex_group_bug.blend)
Author
Member

Added subscriber: @jpbouza-4

Added subscriber: @jpbouza-4
Author
Member

Added subscribers: @angavrilov, @Sergey

Added subscribers: @angavrilov, @Sergey

Added subscriber: @SavMartin

Added subscriber: @SavMartin
Member

Added subscribers: @HooglyBoogly, @PratikPB2123

Added subscribers: @HooglyBoogly, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I can confirm.
Crash caused by cfa53e0fbe
cc @HooglyBoogly

Thanks for the report. I can confirm. Crash caused by cfa53e0fbe cc @HooglyBoogly

This issue was referenced by 284cef473f

This issue was referenced by 284cef473fed06593ee9ce969c121fd2e007f6e3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2022-02-21 19:59:47 +01:00
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95919
No description provided.