Fix T95919: Apply Pose as Rest Pose Operator crashes

A simple mistake with a null mesh in rBcfa53e0fbeed.